src/app/components/homepage/homepage.component.scss
header {
  position: relative;
  background-color: black;
  height: 75vh;
  min-height: 25rem;
  width: 100%;
  overflow: hidden;
}

header video {
  position: absolute;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: 0;
  -ms-transform: translateX(-50%) translateY(-50%);
  -moz-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}

header .container {
  position: relative;
  z-index: 2;
}

header .overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.0;
  z-index: 1;
}

/* Media Query for devices withi coarse pointers and no hover functionality */

/* This will use a fallback image instead of a video for devices that commonly do not support the HTML5 video element 

@media (pointer: coarse) and (hover: none) {
  header {
    background: url('../../../assets/img/homepage/video_background.jpg') black no-repeat center center scroll;
  }


  header video {
    display: none;
  }
}
*/

.docs-header-background {
  overflow: hidden;
  position: relative;
  height: 600px;
  z-index: 2;
}

.docs-header-background::before {
  content: "";
  position: absolute;
  background-image: url("../../../assets/img/homepage/portfolio-header-custom-logo.png");
  background-size: 500px;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-repeat: no-repeat;
  background-position: 80% 30px;
  opacity: 0.2;
  z-index: 2;
}
.docs-header-background::after {
  content: "";
  top: 0;
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
 

  animation: slide 1s  1 3s;
	
  background: -webkit-gradient(
    linear,
    left top,
    right top,
    color-stop(0%, rgba(255, 255, 255, 0)),
    color-stop(50%, rgba(255, 255, 255, 0.8)),
    color-stop(99%, rgba(128, 186, 232, 0)),
    color-stop(100%, rgba(125, 185, 232, 0))
  ); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(
    left,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.8) 50%,
    rgba(128, 186, 232, 0) 99%,
    rgba(125, 185, 232, 0) 100%
  ); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(
    left,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.8) 50%,
    rgba(128, 186, 232, 0) 99%,
    rgba(125, 185, 232, 0) 100%
  ); /* Opera 11.10+ */
  background: -ms-linear-gradient(
    left,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.8) 50%,
    rgba(128, 186, 232, 0) 99%,
    rgba(125, 185, 232, 0) 100%
  ); /* IE10+ */
  background: linear-gradient(
    to right,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.8) 50%,
    rgba(128, 186, 232, 0) 99%,
    rgba(125, 185, 232, 0) 100%
  ); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
}



@keyframes slide {
	0% {transform:translateX(-100%);}
	100% {transform:translateX(100%);}
}

.docs-header-section {
  width: 90vh;
  position: absolute;
  z-index: 0;
  text-align: center;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  .docs-header-headline {
    height: 100%;

    .mat-h1 {
      font-size: 66px;
      font-weight: bold;
      line-height: 56px;
      margin: 15px 5px;
    }
    .mat-h2 {
      font-size: 20px;
      font-weight: 300;
      line-height: 28px;
      margin: 15px 0 25px 0;
    }
  }
   @media only screen and (max-width: 600px) {
.docs-header-background {
  overflow: hidden;
  position: relative;
  height: 200px;
  
}



   .docs-header-headline
  .mat-h1 {
      font-size: 36px;
      font-weight: bold;
      line-height: 36px;
      margin: 15px 5px;
    }
     .docs-header-headline
    .mat-h2 {
      font-size: 20px;
      font-weight: 300;
      line-height: 20px;
      margin: 15px 0 25px 0;
    }  
   }
}

mat-divider {
  width: 100%;
  
}

mat-icon {
  vertical-align: middle;
}

.rotator-wrapper {
  position: relative;
}

.rotator-wrapper span {
  display: inline-block;
  min-width: 155px;
  text-align: left;
}

.rotator-wrapper span span {
  position: absolute;
 
  top: -0px;
  opacity: 0;
  animation: rotateWord 18s linear infinite 0s;
  
}

.rotator-wrapper span span:nth-child(2) {
  animation-delay: 3s;
}

.rotator-wrapper span span:nth-child(3) {
  animation-delay: 6s;
}

.rotator-wrapper span span:nth-child(4) {
  animation-delay: 9s;
}

.rotator-wrapper span span:nth-child(5) {
  animation-delay: 12s;
}

@keyframes rotateWord {
  0% {
    opacity: 0;
  }

  2% {
    opacity: 0;
    transform: translateY(-30px);
  }

  5% {
    opacity: 1;
    transform: translateY(0px);
  }

  15% {
    opacity: 1;
    transform: translateY(0px);
  }

  20% {
    opacity: 0;
    transform: translateY(30px);
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}




.docs-header-button-group {
  position: absolute;
  display: flex;
  flex-flow: row wrap;
  row-gap: 1em;
  column-gap: 1em;
  align-items: center;
  justify-content: space-evenly;
  right:5px;
z-index: 3;
  bottom: 15%;
  margin: 0 auto;
}
.container-fluid {
  padding: 0px;
 
  .homepage-tile {
    height: auto;
    
    h1 {
      font-size: 36px;
      font-weight: bold;
      line-height: 36px;
      margin: 15px 5px;
    }
  }
}
#bio {
  

  
  mat-tab-group {

    h1 {
      font-size: 22px;
      font-weight: bold;
      line-height: 22px;
      margin: 15px 10px;
    }
    h2 {
      font-size: 18px;
      font-weight: 300;
      line-height: 18px;
      margin: 15px 10px;
    }
    p{
       font-size: 12px;
      font-weight: 300;
      line-height: 12px;
     margin: 15px 10px;
    }
    ul li {
      font-size: 12px;
      font-weight: 200;
      line-height: 12px;
      margin: 15px 10px;
      padding: 0;
      
    }
  }
}

.contact-clipboard {
  width: auto;
}

